Se realiza ajuste de estilos en el header

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,8 +1,42 @@
-body {
-	background: red;
+body{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
-p {
-	color: white;
-	font-weight: bold;
+a {
+	text-decoration: none;
+	display: inline;
+	color: black;
+	/* border: solid 1px red; */
+}
+
+header {
+	width: 100%;
+	height: 140px;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+}
+
+header .header_icons_container {
+	width: 100%;
+	height: 50px;
+	background-color: #48cfad;
+	display: grid;
+	/* border: solid 1px blue; */
+
+}
+
+header .header_icons_container .icons {
+	width: 300px;
+	height: auto;
+	display: flex;
+	justify-items: flex-end;
+	align-items: center;
+	justify-content: space-between;
+	justify-self: end;
+	margin-right: 50px;
+
 }
