--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,11 @@
+
+/* font-family: 'Roboto Slab', serif;
+font-family: 'Roboto Mono', monospace;
+font-family: 'Roboto', sans-serif; */
+
+
 body{
+	font-family: 'Roboto Slab', serif;
 	position: fixed;
 	top: 0;
 	bottom: 0;
@@ -74,4 +81,47 @@ nav .profile_link a {
 	color: black;
 	border-bottom: solid 1px black;
 
+}
+
+.home_main {
+	display: grid;
+	grid-template-columns: 1fr 4fr 1fr;
+	height: 75%;
+	/* width: 50%; */
+	background-image: url('../assets/images/Cover.png');
+	background-position:center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.home_main section{
+	display: grid;
+	grid-column: 2;
+	justify-items: center;
+	height: 220px;
+    margin-top: 230px;
+}
+
+.home_main-text {
+	font-family: 'Roboto Mono', monospace;
+	font-size: 30px;
+	font-weight: 700px;
+	letter-spacing: 10px;
+	color: white;
+	text-align: center;
+	padding: 0 20px;
+}
+
+.home_main-button {
+	font-family: 'Roboto Mono', monospace;
+	font-weight: 700;
+	font-size: 18px;
+	width: 110px;
+	height: 40px;
+	background: #48cfad;
+	border-radius: 10px;
+	display: flex;
+    align-items: center;
+	justify-content: center;
+	padding: 10px;
 }
