--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,8 @@
 body{
+	font-family: 'Roboto mono', monospace;
+
+}
+.home-body {
 	position: fixed;
 	top: 0;
 	bottom: 0;
@@ -10,6 +14,7 @@ a {
 	text-decoration: none;
 	display: inline;
 	color: black;
+	font-weight: bold;
 	/* border: solid 1px red; */
 }
 
@@ -30,7 +35,7 @@ header .header_icons_container {
 }
 
 header .header_icons_container .icons {
-	width: 300px;
+	width: 220px;
 	height: auto;
 	display: flex;
 	justify-items: flex-end;
@@ -43,7 +48,7 @@ header .header_icons_container .icons {
 
 header .icons span {
 	color: white;
-	/* font-size: 16px; */
+    font-size: 22px;
 }
 
 nav {
@@ -73,5 +78,117 @@ nav .profile_link {
 nav .profile_link a {
 	color: black;
 	border-bottom: solid 1px black;
+	padding-bottom: 6px;
 
+}
+
+/* ****************CUERPO HOME************** */
+.home_main {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    height: 78%;
+    background-image: url('../assets/images/Cover.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.home_main section {
+    display: grid;
+    grid-column: 2;
+    justify-items: center;
+    height: 200px;
+    margin-top: 250px;
+}
+.home_main-text {
+    font-family: 'Roboto mono', monospace;
+    font-size: 30px;
+    font-weight: 700px;
+    letter-spacing: 10px;
+    color: black;
+    text-align: center;
+    color: white;
+}
+.home_main-button {
+	font-family: 'Roboto mono', monospace;
+    width: 100px;
+    height: 40px;
+	background: #48cfad;
+	border-radius: 10px;;
+	text-align: center;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 18px;
+	line-height: 50px;
+	padding: 6px;
+}
+
+/* ***********BLOGS*********************** */
+
+.blogs_main {
+	display: grid;
+}
+.blogs_new_container{
+	background-color: #e6e9ed;
+	padding: 0 50px 40px;
+}
+
+.blogs_main_new {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	grid-template-rows: 2fr;
+
+}
+
+.blogs_main_new h3 {
+	padding: 10px 0;
+}
+
+.blogs_new_img_container {
+	grid-column: 1;
+}
+
+.blogs_new_img_container img{
+	width: 85%;
+}
+
+.blogs_new_info_container {
+	grid-column: 2;
+}
+.blogs_new_info_container p {
+	margin-bottom: 35px;
+}
+
+.blogs_button {
+	border: 1px solid #47cfac;
+	padding: 10px 15px; 
+	border-radius: 5px;
+	font-size: 12px;
+}
+
+.blogs_post_container {
+	padding: 0  50px 40px;
+}
+
+.blogs_post_container h3 {
+	border-bottom: 1px solid #cdd2da;
+	padding-bottom: 20px;
+	text-align: center;
+	margin-top: 50px;
+}
+
+.blogs_post_container .post_container {
+	display: inline-block;
+	padding-left: 10px;
+	max-width: 30%;
+	margin: 30px 0;
+}
+
+.blogs_post_container .post_container p {
+	margin: 35px 0 20px;
+}
+
+.blogs_post_container .post_container img {
+	width: 100%;
 }
