--- a/css/estilo.css
+++ b/css/estilo.css
@@ -192,3 +192,16 @@ nav .profile_link a {
 .blogs_post_container .post_container img {
 	width: 100%;
 }
+footer {
+	width: 100%;
+	height: 80px;
+	background-color: #22272d;
+	border-top: 35px solid #47cfac;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+footer p {
+	color: white;
+}
