--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,6 +16,11 @@ body{
 	right: 0;
 }
 
+.grid_container {
+	max-width: 980px;
+	margin: auto;
+}
+
 a {
 	text-decoration: none;
 	display: inline;
