--- a/css/estilo.css
+++ b/css/estilo.css
@@ -235,4 +235,36 @@ footer p {
 .blogpost_main_container article h1 {
 	font-size: 35px;
 	padding: 20px 0;
+
+}
+
+/* **********contacto*********** */
+
+.contact_main_container {
+	width: 100%;
+	height: 250px;
+	background-color: #e6e9ed;
+	text-align: center;
+	padding-bottom: 50px;
+}
+
+.contact_main_container div {
+	display: inline-block;
+	width: 49.5%;
+	height: 100%;
+}
+.contact_main_container div a {
+	border-bottom: 1px solid black;
+    padding-bottom: 5px;
+}
+.contact_main_container div p {
+    padding-top: 10px;
+}
+.contact_main_container img {
+	width: 100px;
+}
+
+.contact_main_container .contact_left, .contact_right {
+	text-align: initial;
+	margin-top: 85px;
 }
